--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
+
 }
 
 tasks.named('test') {
