--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	implementation 'com.h2database:h2' // dp 연결전 에러방지 -> H2 데이터베이스 사용 가정
 }
 
 tasks.named('test') {
