--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,6 +33,10 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 
 	implementation 'com.h2database:h2' // dp 연결전 에러방지 -> H2 데이터베이스 사용 가정
+
+	//jpa
+	runtimeOnly("com.mysql:mysql-connector-j")
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
