:sparkles: feat: DB연결 구현, JWT 토큰 설정, , JWT권한 필터 설정 구현 JwtAuthenticationProcessingFilter 구현 /ㅕ/users 이외의 요청의 경우 token 확인 JWT refreshToken, accessToken 설정 구현 DB ììDB 연결 정보 설정 db 정보 깃 이그노어 추가 application-secret.yml 파일

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,9 +28,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
-
-//	implementation 'com.h2database:h2' // dp 연결전 에러방지 -> H2 데이터베이스 사용 가정
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly("com.mysql:mysql-connector-j")
+	implementation 'com.auth0:java-jwt:4.2.1'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
