:bug: fix: crawling repo fix

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,13 +1,21 @@
 server.port: 8080
 server.ssl.enabled: false
 
-# sizzang
+## sizzang
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://sizzang.cggdc2hymcot.ap-northeast-2.rds.amazonaws.com/sizzang?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+#    username: sizzang
+#    password: sizzangssafy
+
+  #sizzang
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://sizzang.cggdc2hymcot.ap-northeast-2.rds.amazonaws.com/sizzang?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-    username: sizzang
-    password: sizzangssafy
+    url: jdbc:mysql://localhost:3306/sizzang?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+    username: root
+    password: ssafy
 
   jpa:
     show-sql: true
