--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -37,6 +37,10 @@ dependencies {
 	//jpa
 	runtimeOnly("com.mysql:mysql-connector-j")
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.537'
+
 }
 
 tasks.named('test') {
