--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
 jwt:
   secretKey: ${secretKey}
   access:
-    expiration: 1800000
+    expiration: 180000000 #00 붙임
     header: Authorization
   refresh:
     expiration: 1209600000
