:sparkles: feat: Store findALl

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,7 +16,8 @@ group = 'com.zzol'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 configurations {
