:sparkles: feat: 소분류 ENtity 생성

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,8 +16,7 @@ group = 'com.zzol'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = '17'
 }
 
 configurations {
